# game-architecture-comparison

./: .gitmodules  CMakeLists.txt  README.md
assets/: Rock_1.mtl  frag.glsl  laser.mtl  vert.glsl
base-entity/: CMakeLists.txt  main.cpp
classic-ecs/: CMakeLists.txt  ecs.hpp  main.cpp  test-ecs.cpp
hybrid/: CMakeLists.txt  main.cpp
hybrid-lua/: CMakeLists.txt  Findluajit.cmake  luax.hpp  main.cpp  main.lua
no-polymorphism/: CMakeLists.txt  main.cpp
shared/: shared.cpp  shared.hpp
uber-entity/: CMakeLists.txt  main.cpp
unity-style/: CMakeLists.txt  ecs.cpp  ecs.hpp  main.cpp
